# dot-clangformat

./: .pre-commit-config.yaml  CMakeLists.txt  CMakePresets.json  README.md
.github/workflows/: ci.yml
cmake/: mb-dot-clang-format.cmake
python/: mb-dot-clang-format.py
scripts/: git-tag
